<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.dorm_info.DormInfoFragment">

    <!--Header: Announcement-->
    <TextView
        android:id="@+id/text_dorm_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/dorm_information"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Create announcement button-->
    <Button
        android:id="@+id/edit_dorm_info_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:backgroundTint="@color/button_gray"
        android:text="@string/create"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_dorm_info"
        app:strokeColor="@color/material_dynamic_neutral60"
        app:strokeWidth="1dp"
        style="@style/Widget.Material3.Button.TextButton"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/myCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_dorm_info_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/dorm_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/dorm_name" />

            <TextView
                android:id="@+id/dorm_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/dorm_name"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_dorm_info_button" />

            <TextView
                android:id="@+id/curfew_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="12dp"
                android:text="@string/curfew_hours"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dorm_name" />

            <TextView
                android:id="@+id/curfew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/curfew_value"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/curfew_heading" />
            <TextView
                android:id="@+id/address_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/address"
                android:layout_marginTop="12dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/curfew" />

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address_value"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address_heading" />

            <TextView
                android:id="@+id/contact_details_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="12dp"
                android:text="@string/contact_details"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address" />

            <TextView
                android:id="@+id/contact_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_details_value"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_details_heading" />
            <TextView
                android:id="@+id/history_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/history"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_details" />

            <TextView
                android:id="@+id/history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/history_value"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/history_heading" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>