<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.announcement.AnnouncementFragment"
    android:fitsSystemWindows="true">

        <!--Header-->

        <TextView
            android:id="@+id/text_create_announcement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/add_announcement"
            android:textSize="34sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Subject label-->
        <TextView
            android:id="@+id/labelSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            android:text="@string/subject"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_create_announcement" />


        <!--Subject input field       -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/labelSubject"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            app:hintEnabled="false"
            android:id="@+id/input_subject_layout"
            app:boxStrokeColor="@android:color/transparent"
            app:boxBackgroundColor="@color/button_gray"
            app:boxBackgroundMode="outline"
            app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_subject"
                    android:layout_marginHorizontal="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_subject"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Details Label-->
        <TextView
            android:id="@+id/labelDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="6dp"
            android:text="@string/details"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_subject_layout" />

        <!--        Details input field-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/labelDetails"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            app:hintEnabled="false"
            android:id="@+id/input_details_layout"
            app:boxStrokeColor="@android:color/transparent"
            app:boxBackgroundColor="@color/button_gray"
            app:boxBackgroundMode="outline"
            app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_details"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="15"
                    android:minLines="15"
                    android:maxLines="15"
                    android:gravity="top|start"
                    android:scrollbars="vertical"
                    android:hint="@string/enter_details"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Submit button-->
        <Button
            android:id="@+id/save_announcement_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/button_gray"
            android:text="@string/save"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/input_details_layout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:strokeColor="@color/material_dynamic_neutral60"
            app:strokeWidth="1dp" />

        <!--        Cancel Button-->
        <Button
            android:id="@+id/cancel_announcement_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/button_gray"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/save_announcement_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:strokeColor="@color/material_dynamic_neutral60"
            app:strokeWidth="1dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>